Style: Fix alignment of info icon

--- a/src/App.scss
+++ b/src/App.scss
@@ -507,7 +507,12 @@ h6 {
         align-self: center;
       }
 
+      h3 {
+        width: calc(100% - 2.5rem);
+      }
+
       span {
+        margin-bottom: auto;
         margin-right: 1rem;
       }
 
